--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Benniismae",
+  "author": "Ari",
   "repository": {
     "type": "git",
-    "url": "https://github.com/beniismael/botstyle.git"
+    "url": "https://github.com/Ari-tech04/andrew.git"
   },
   "bugs": {
-    "url": "https://github.com/beniismael/botstyle/issues"
+    "url": "https://github.com/Ari-tech04/andrew/issues"
   },
-  "homepage": "https://github.com/beniismael/botstyle",
+  "homepage": "https://github.com/Ari-tech04/andrew",
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.0.16",
